# ml_ops_test

./: Dockerfile  README.md  pyproject.toml
data/: energy_data.csv  preprocessed_data.csv  sample.py  weather_data.csv
src/: api.py  model_evaluation.py  model_training.py  preprocessing.py
