
[tool.poetry]
name = "ml_ops_test"
version = "0.1.0"
description = "ML Ops Test for trend prediction"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.1.2"
numpy = "^1.26.1"
scikit-learn = "^1.3.2"
fastapi = "^0.95.1"
uvicorn = "^0.22.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

